src/Illuminate/Exception/resources/pretty-page.css
.cf:before, .cf:after {content: " ";display: table;} .cf:after {clear: both;} .cf {*zoom: 1;}
body {
  font: 14px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
  color: #2B2B2B;
  background-color: #e7e7e7;
  padding:0;
  margin: 0;
  max-height: 100%;
}
  a {
    text-decoration: none;
  }

.container{
    height: 100%;
    width: 100%;
    position: fixed;
    margin: 0;
    padding: 0;
}

.branding {
  position: absolute;
  top: 10px;
  right: 20px;
  color: #777777;
  font-size: 10px;
    z-index: 100;
}
  .branding a {
    color: #CD3F3F;
  }
/* ... */

